[package]
name = "edid"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.7.3"
num-traits = "0.2.17"

[dev-dependencies]
serde_json = "1.0.111"
test-generator = "0.3.1"
