[package]
name = "redid"
version = "0.1.0"
authors = ["Maxime Ripard <mripard@kernel.org>"]
description = "VESA EDID Generation Library"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
keywords = ["edid", "display", "graphics"]
categories = ["encoding", "graphics", "hardware-support"]
repository = "https://github.com/mripard/redid/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
enum-map = "2.7.3"
num-traits = "0.2.17"
typed-builder = "0.18.1"

[dev-dependencies]
serde_json = "1.0.111"
test-generator = "0.3.1"
uom = "0.35.0"
